# AI-Algorithms

./: .gitignore  CMakeLists.txt  README.md
src/: ArcConsistency.cpp  ArcConsistency.h  BackJumping.cpp  BackJumping.h  BackTracking.cpp  BackTracking.h  FWChecking.cpp  FWChecking.h  Feasibility.cpp  Feasibility.h  Graph.cpp  Graph.h  GraphGeneration.cpp  GraphGeneration.h  HybridSearch.cpp  HybridSearch.h  KempeChains.cpp  KempeChains.h  Lecture.cpp  Lecture.h  MapColoring.cpp  MapColoring.h  Node.cpp  Node.h  Strategy.cpp  Strategy.h  solvingType.h
